--- a/src/Dotnet6Auth.WebAPI/Dotnet6Auth.WebAPI.csproj
+++ b/src/Dotnet6Auth.WebAPI/Dotnet6Auth.WebAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -23,10 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Authorization\" />
     <Folder Include="Migrations\SqlServerMigrations\" />
     <Folder Include="Migrations\SqliteMigrations\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
