--- a/src/Dotnet6Auth.WebAPI/appsettings.Development.json
+++ b/src/Dotnet6Auth.WebAPI/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WebApiDatabase": "Data Source=dotnet6_authentication_database.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
