--- a/Frontend/angular13_authentication/.vscode/settings.json
+++ b/Frontend/angular13_authentication/.vscode/settings.json
@@ -8,9 +8,6 @@
         "**/Thumbs.db": true,
         "[!s]*/**": true,
         "s[!r]*/**": true,
-        "sr[!c]*/**": true,
-        "src/[!a]*/**": true,
-        "src/a[!p]*/**": true,
-        "src/ap[!p]*/**": true
+        "sr[!c]*/**": true
     }
 }
